Fix page navigation and alignment

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -24,7 +24,10 @@ body {
 }
 
 .site-content {
+  display: flex;
+  flex-direction: column;
   flex: 1;
+  align-content: space-between;
   width: 100%;
   padding: 1.5em;
   -ms-flex-preferred-size: auto;
@@ -262,6 +265,10 @@ nav {
   font-size: 14px;
 }
 
+.page {
+  padding: 0 10px;
+}
+
 .posts > .post {
   padding-bottom: 2em;
   border-bottom: 1px solid $lightGray;
@@ -293,18 +300,20 @@ nav {
 }
 
 .image-post {
+  flex: 1;
   max-width: 940px;
-  align-items: center;
-  justify-content: center;
   display: flex;
   flex-wrap: wrap;
 }
 
 .portrait {
+  justify-content: center;
+  align-content: flex-start;
   flex-direction: row;
 }
 
 .landscape {
+  justify-content: flex-start;
   flex-direction: column;
 }
 
@@ -337,9 +346,9 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: center;
+  align-self: center;
   justify-content: center;
   text-align: left;
-  flex-grow: 1;
   min-height: 100px;
 }
 
@@ -348,10 +357,10 @@ nav {
   display: flex;
   padding: 20px 10px 0 10px;
   flex-direction: column;
-  align-items: center;
+  align-self: flex-start;
+  align-items: flex-start;
   justify-content: center;
   text-align: center;
-  flex-grow: 1;
   min-height: 100px;
 }
 
@@ -370,6 +379,7 @@ nav {
 @media screen and (max-width: 600px) {
   .portrait {
     flex-direction: column;
+    justify-content: flex-start;
   }
 
   .portrait .img {
@@ -390,35 +400,40 @@ nav {
     padding: 20px 10px 0 10px;
     width: 100%;
     text-align: center;
+    align-items: flex-start;
+    align-self: flex-start;
   }
 }
 
-.PageNavigation {
+.page-nav {
+  width: 100%;
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
+  padding: 0 10px;
   margin: 0 auto;
   margin-top: 15px;
 }
 
-.PageNavigation a {
+.page-nav a {
   color: $purple-dark;
 }
 
-.PageNavigation a:hover {
+.page-nav a:hover {
   color: $purple-pink;
 }
 
-.PageNavigation .next {
+.page-nav .next {
   width: 33%;
   text-align: right;
 }
 
-.PageNavigation .prev {
+.page-nav .prev {
   width: 33%;
   text-align: left;
 }
 
-.PageNavigation .home {
+.page-nav .home {
   width: 33%;
   text-align: center;
 }
