--- a/_sass/_svg-icons.scss
+++ b/_sass/_svg-icons.scss
@@ -52,24 +52,30 @@
     background-color: $purple-dark;
     -webkit-mask-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 1100 1100" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M50 0h200q21 0 35.5 14.5T300 50v200q0 21-14.5 35.5T250 300H50q-21 0-35.5-14.5T0 250V50q0-21 14.5-35.5T50 0zm400 0h200q21 0 35.5 14.5T700 50v200q0 21-14.5 35.5T650 300H450q-21 0-35.5-14.5T400 250V50q0-21 14.5-35.5T450 0zm400 0h200q21 0 35.5 14.5T1100 50v200q0 21-14.5 35.5T1050 300H850q-21 0-35.5-14.5T800 250V50q0-21 14.5-35.5T850 0zM50 400h200q21 0 35.5 14.5T300 450v200q0 21-14.5 35.5T250 700H50q-21 0-35.5-14.5T0 650V450q0-21 14.5-35.5T50 400zm400 0h200q21 0 35.5 14.5T700 450v200q0 21-14.5 35.5T650 700H450q-21 0-35.5-14.5T400 650V450q0-21 14.5-35.5T450 400zm400 0h200q21 0 35.5 14.5T1100 450v200q0 21-14.5 35.5T1050 700H850q-21 0-35.5-14.5T800 650V450q0-21 14.5-35.5T850 400zM50 800h200q21 0 35.5 14.5T300 850v200q0 21-14.5 35.5T250 1100H50q-21 0-35.5-14.5T0 1050V850q0-21 14.5-35.5T50 800zm400 0h200q21 0 35.5 14.5T700 850v200q0 21-14.5 35.5T650 1100H450q-21 0-35.5-14.5T400 1050V850q0-21 14.5-35.5T450 800zm400 0h200q21 0 35.5 14.5T1100 850v200q0 21-14.5 35.5T1050 1100H850q-21 0-35.5-14.5T800 1050V850q0-21 14.5-35.5T850 800z"/></svg>');
     mask-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 1100 1100" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M50 0h200q21 0 35.5 14.5T300 50v200q0 21-14.5 35.5T250 300H50q-21 0-35.5-14.5T0 250V50q0-21 14.5-35.5T50 0zm400 0h200q21 0 35.5 14.5T700 50v200q0 21-14.5 35.5T650 300H450q-21 0-35.5-14.5T400 250V50q0-21 14.5-35.5T450 0zm400 0h200q21 0 35.5 14.5T1100 50v200q0 21-14.5 35.5T1050 300H850q-21 0-35.5-14.5T800 250V50q0-21 14.5-35.5T850 0zM50 400h200q21 0 35.5 14.5T300 450v200q0 21-14.5 35.5T250 700H50q-21 0-35.5-14.5T0 650V450q0-21 14.5-35.5T50 400zm400 0h200q21 0 35.5 14.5T700 450v200q0 21-14.5 35.5T650 700H450q-21 0-35.5-14.5T400 650V450q0-21 14.5-35.5T450 400zm400 0h200q21 0 35.5 14.5T1100 450v200q0 21-14.5 35.5T1050 700H850q-21 0-35.5-14.5T800 650V450q0-21 14.5-35.5T850 400zM50 800h200q21 0 35.5 14.5T300 850v200q0 21-14.5 35.5T250 1100H50q-21 0-35.5-14.5T0 1050V850q0-21 14.5-35.5T50 800zm400 0h200q21 0 35.5 14.5T700 850v200q0 21-14.5 35.5T650 1100H450q-21 0-35.5-14.5T400 1050V850q0-21 14.5-35.5T450 800zm400 0h200q21 0 35.5 14.5T1100 850v200q0 21-14.5 35.5T1050 1100H850q-21 0-35.5-14.5T800 1050V850q0-21 14.5-35.5T850 800z"/></svg>');
-    background-position: center;
-    background-repeat: no-repeat;
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    -webkit-mask-position: center;
+    mask-position: center;
   }
 
   &.arrow-left {
     background-color: $purple-dark;
     -webkit-mask-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 1177 940.6666870117188" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M16 438.333l522-427q16-13 27.5-8t11.5 26v291h550q21 0 35.5 14.5t14.5 35.5v200q0 21-14.5 35.5t-35.5 14.5H577v291q0 21-11.5 26t-27.5-8l-522-427q-16-13-16-32t16-32z"/></svg>');
     mask-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 1177 940.6666870117188" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M16 438.333l522-427q16-13 27.5-8t11.5 26v291h550q21 0 35.5 14.5t14.5 35.5v200q0 21-14.5 35.5t-35.5 14.5H577v291q0 21-11.5 26t-27.5-8l-522-427q-16-13-16-32t16-32z"/></svg>');
-    background-position: center;
-    background-repeat: no-repeat;
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    -webkit-mask-position: center;
+    mask-position: center;
   }
 
   &.arrow-right {
     background-color: $purple-dark;
     -webkit-mask-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 1177 940.6666870117188" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M639 11.333l522 427q16 13 16 32t-16 32l-522 427q-16 13-27.5 8t-11.5-26v-291H50q-21 0-35.5-14.5T0 570.333v-200q0-21 14.5-35.5t35.5-14.5h550v-291q0-21 11.5-26t27.5 8z"/></svg>');
     mask-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 1177 940.6666870117188" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M639 11.333l522 427q16 13 16 32t-16 32l-522 427q-16 13-27.5 8t-11.5-26v-291H50q-21 0-35.5-14.5T0 570.333v-200q0-21 14.5-35.5t35.5-14.5h550v-291q0-21 11.5-26t27.5 8z"/></svg>');
-    background-position: center;
-    background-repeat: no-repeat;
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    -webkit-mask-position: center;
+    mask-position: center;
   }
 
   &.menu:hover {
